# rieltor_poster

./: .env.example  .gitignore  OfferPoster2.py  PosterPlaywright.py  PosterSelenium.py  README.md  RieltorDashboard.vbs  crm_session.py  dashboard.py  description_analyzer.py  html_parser.py  launch_dashboard.py  main.py  new_offer_filler.py  new_offer_filler_(old).py  offer_db.py  offer_edit.py  offer_mapping.py  offer_page.html  pyproject.toml  recheck_descriptions.py  relocate-dashboard.bat  relocate-dashboard.ps1  repair.py  requirements.in  requirements.txt  rieltor_dataclasses.py  rieltor_dataclasses_01.py  rieltor_offer_poster.py  rieltor_offer_poster_v2.py  rieltor_poster.py  rieltor_session.py  run_schema_collection.py  schema_collector.py  setup-dashboard.bat  setup-dashboard.ps1  setup.ps1  setup.sh  setup_logger.py  status_sync.py  (+3 more)
.streamlit/: config.toml
crm_data_parser/: __init__.py  address_normalize.py  cadastral_lookup.py  crm_session.py  description_analyzer.py  estate_list_collector.py  field_extractor.py  geocoder.py  html_parser.py  photo_downloader.py
crm_handler/: description_analyzer.py  field_extractor.py  html_parser.py
models/: choice_labels.py  rieltor_dataclasses.py  schema.py
new_offer/: __init__.py  address.py  autocomplete.py  dict_filler.py  fields.py  filler.py  mappings.py  misc.py  photo_processing.py  photos.py  structure.py
new_offer_poster/: __init__.py  dict_filler.py
rieltor_handler/: __init__.py  closed_base_cleaner.py  draft_photo_fixer.py  drafts_publisher.py  published_offer_unpublisher.py  rieltor_offer_poster.py  rieltor_session.py  run_schema_collection.py
rieltor_handler/new_offer_poster/: address.py  autocomplete.py  dict_filler.py  fields.py  mappings.py  misc.py  photo_processing.py  photos.py  structure.py  validation.py
schema_collector/: __init__.py  _collapse.py  _core.py  _label.py  _property_type.py  _smoke_fill.py
schemas/: __init__.py
tests/: test_address_normalize.py  test_cadastral_lookup.py  test_clean_pics.py  test_closed_base_cleaner.py  test_conditional_controllers.py  test_currency_resolver.py  test_debug_html_save.py  test_description_analyzer_floor.py  test_district_recovery.py  test_draft_photo_fixer.py  test_drafts_count_io.py  test_drafts_publisher.py  test_estate_actuality.py  test_extra_file_handler.py  test_floor_default_and_house_clear.py  test_geocoder.py  test_html_parser_address.py  test_html_parser_floor.py  test_html_parser_purpose.py  test_launch_dashboard.py  test_offer_db_edit.py  test_offer_db_get_posted.py  test_offer_edit.py  test_photo_path_resolve.py  test_photo_redownload.py  test_price_actuality.py  test_published_offer_unpublisher.py  test_repair.py  test_save_error_recovery.py  test_setup_logger_hierarchy.py  test_status_sync.py  test_toggle_button_group.py  test_updater.py  test_watermark.py
themes/: dark.toml  light.toml
tools/: make_icon.py
(+33 files in other folders)
