[project]
name = "rieltor"
version = "0.1.0"
description = "Automation tool: collect real estate listings from a CRM and publish them on Rieltor.ua via browser automation."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "AGrabov" }]
keywords = ["rieltor", "crm", "real-estate", "automation", "playwright", "selenium"]

dependencies = [
    # Browser automation
    "playwright>=1.57",
    "selenium>=4.39",
    # HTML parsing
    "beautifulsoup4>=4.14",
    "fake-useragent>=2.2",
    # HTTP
    "requests>=2.32",
    # Config & env
    "python-dotenv>=1.2",
    # Images
    "pillow>=12.1",
    # Logging
    "colorlog>=6.10",
    # NLP
    "spacy>=3.8",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1",
    "ipython>=9.9",
]

[project.scripts]
rieltor = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crm_data_parser", "rieltor_handler", "schemas"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long (покрыто line-length)
    "E741",   # ambiguous variable name (l, O — часто в math/backtrader)
    "F401",   # unused import (side-effect imports в backtrader)
    "UP007",  # use X | Y instead of Optional — для совместимости
    "UP035",  # deprecated typing imports — backtrader совместимость
    "E402",   # module level import not at top (встречается в стратегиях)
]

[tool.ruff.lint.per-file-ignores]
"indicators/**" = ["E302", "E303"]  # Backtrader-style class spacing

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
